[package]
name = "crypto-eth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers-core = { version = "2.0.10", features = ["eip712"] }
ethers-contract = { version = "2.0.10", features = ["abigen"] }
ethers-providers = { version = "2.0.10" }

[lib]
name = "crypto_eth"
crate-type = ["staticlib"]
